--- a/styles/styles.css
+++ b/styles/styles.css
@@ -333,6 +333,7 @@ img {
   min-width: 528px;
   min-height: 581px;
   background-color: var(--primary-white-color);
+  padding: 40px;
 
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -352,6 +353,93 @@ img {
   justify-content: center;
   background-color: transparent;
   
+}
+.modal-title {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 23px;
+text-align: center;
+letter-spacing: 0.03em;
+  margin-bottom: 12px;
+  color: var(--title-text-color);
+  
+}
+.modal-input {
+  width: 100%;
+  height: 45px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+  color: var(--title-text-color);
+  font-size: 18px;
+  padding-left: 40px;
+  outline: transparent;
+}
+
+
+.input-wrap {
+  position: relative;
+  
+}
+.modal-input-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  
+}
+
+.modal-input:focus {
+  border-color: var(--accent-color);
+}
+.modal-input:focus + .modal-input-icon {
+  fill: var(--accent-color);
+}
+
+.input-label span {
+  display: block;
+  margin-bottom: 4px;
+  text-align: start;
+}
+.modal-field {
+  margin-bottom: 10px;
+}
+.modal-text {
+  width: 100%;
+  height: 100px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+resize: none;
+outline: transparent;
+}
+.modal-text:focus {
+  border-color: var(--accent-color);
+}
+.modal-text::placeholder {
+  font-size: 12px;
+line-height: 14px;
+letter-spacing: 0.01em;
+
+color: rgba(117, 117, 117, 0.5);
+padding-left: 16px;
+padding-top: 12px;
+}
+.modal-button {
+  border-radius: 4px;
+  width: 200px;
+  height: 50px;
+  margin: 0 auto;
+  border: none;
+  background-color: var(--accent-color);
+  color: var(--primary-white-color);
+  font-family: "Roboto";
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.0
+}
+.modal-button:hover,
+.modal-button:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
 }
 
   
