--- a/styles/styles.css
+++ b/styles/styles.css
@@ -373,6 +373,9 @@ border-radius: 4px;
   font-size: 18px;
   padding-left: 40px;
   outline: transparent;
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--primary-animation);
 }
 
 
@@ -384,13 +387,17 @@ border-radius: 4px;
   position: absolute;
   left: 12px;
   top: 50%;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: var(--primary-animation);
+  
   
 }
 
 .modal-input:focus {
   border-color: var(--accent-color);
 }
-.modal-input:focus + .modal-input-icon {
+ .modal-input:focus + .modal-input-icon {
   fill: var(--accent-color);
 }
 
@@ -409,6 +416,9 @@ border-radius: 4px;
 border-radius: 4px;
 resize: none;
 outline: transparent;
+transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--primary-animation);
 }
 .modal-text:focus {
   border-color: var(--accent-color);
@@ -434,12 +444,26 @@ padding-top: 12px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.9;
-  letter-spacing: 0.0
+  letter-spacing: 0.0;
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: var(--primary-animation);
 }
 .modal-button:hover,
 .modal-button:focus {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
+}
+
+.label-text-modal {
+  font-size: 12px;
+line-height: 1.7;
+
+letter-spacing: 0.01em;
+
+  
+
+
 }
 
   
