--- a/styles/styles.css
+++ b/styles/styles.css
@@ -471,6 +471,8 @@ letter-spacing: 0.01em;
 .checkbox-text {
   line-height: 1.7;
   letter-spacing: 0.03em;
+  display: inline-flex;
+  align-items: center;
 }
 .checkbox-text span {
   width: 16px;
@@ -485,9 +487,18 @@ letter-spacing: 0.01em;
 }
 .input-chek:checked + .checkbox-text span {
   background-color: var(--accent-color);
-  background-color: transparent;
+ border: none;
   fill: var(--primary-white-color);
+  
 }
+.input-chek:focus + .checkbox-text span {
+  border-color: var(--accent-color);
+  
+}
+.modal-button-field {
+  text-align: center;
+}
+
 
 
 
