--- a/styles/styles.css
+++ b/styles/styles.css
@@ -625,6 +625,51 @@ letter-spacing: 0.01em;
 .contact-link-header:focus {
   color: var(--accent-color);
 }
+
+.footer-subscribe-form {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.subscribe-form {
+  width: 358px;
+  height: 50px;
+  padding-left: 16px;
+  margin-right: 15px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+border-radius: 4px;
+font-size: 16px;
+line-height: 1.25;
+letter-spacing: 0.03em;
+color: rgba(255, 255, 255, 0.6);
+}
+.subscribe-form::placeholder {
+  font-size: 16px;
+line-height: 1.25;
+letter-spacing: 0.03em;
+color: rgba(255, 255, 255, 0.6);
+
+ 
+}
+.subscribe-icon {
+  fill: var(--primary-white-color);
+  margin-left: 10px;
+}
+.button {
+}
+.subscribe-button { 
+  margin-top: 0;
+  ;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+
+}
+
 /* Прибираю точки в списках */
 .list {
   list-style: none;
@@ -794,6 +839,9 @@ letter-spacing: 0.01em;
 .client-link:focus .client-list-icon {
   fill: var(--accent-color);
 }
+.footer-soc-container {
+  margin-right: 93px;
+}
 .footer-soclist {
   justify-content: start;
 }
@@ -817,6 +865,7 @@ letter-spacing: 0.01em;
 .container-footer {
   display: flex;
   align-items: baseline;
+  justify-content: flex-end;
 }
 .footer-info {
   margin-right: 70px;
