--- a/styles/styles.css
+++ b/styles/styles.css
@@ -354,6 +354,12 @@ img {
   background-color: transparent;
   
 }
+.close-button:hover,
+.close-button:focus {
+  fill: var(--accent-color);
+}
+
+
 .modal-title {
   font-size: 20px;
   font-weight: 700;
