--- a/styles/styles.css
+++ b/styles/styles.css
@@ -362,11 +362,16 @@ img {
   fill: var(--accent-color);
 }
 
+.input-label{
+  display: block;
+  margin-bottom: 4px;
+}
+
 
 .modal-title {
   font-size: 20px;
   font-weight: 700;
-  line-height: 23px;
+  line-height: 1.15;
 text-align: center;
 letter-spacing: 0.03em;
   margin-bottom: 12px;
@@ -375,7 +380,7 @@ letter-spacing: 0.03em;
 }
 .modal-input {
   width: 100%;
-  height: 45px;
+  height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
   color: var(--title-text-color);
@@ -412,17 +417,20 @@ border-radius: 4px;
   fill: var(--accent-color);
 }
 
-.input-label span {
-  display: block;
-  margin-bottom: 4px;
-  text-align: start;
-}
+
 .modal-field {
   margin-bottom: 10px;
 }
+.text-area-field {
+  margin-bottom: 20px;
+}
+
 .modal-text {
+  display: block;
   width: 100%;
-  height: 100px;
+  height: 120px;
+  padding-left: 16px;
+  padding-top: 12px;
   border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
 resize: none;
@@ -440,8 +448,7 @@ line-height: 14px;
 letter-spacing: 0.01em;
 
 color: rgba(117, 117, 117, 0.5);
-padding-left: 16px;
-padding-top: 12px;
+
 }
 .modal-button {
   border-radius: 4px;
@@ -476,6 +483,11 @@ letter-spacing: 0.01em;
 
 .modal-link {
   color: var(--accent-color);
+}
+.checkbox-container{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
 }
 .checkbox-text {
   line-height: 1.7;
@@ -655,7 +667,7 @@ border-radius: 4px;
 font-size: 16px;
 line-height: 1.25;
 letter-spacing: 0.03em;
-color: rgba(255, 255, 255, 0.6);
+color: var(--primary-white-color);
 }
 .subscribe-form::placeholder {
   font-size: 16px;
